--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^2.6.5",
     "element-ui": "^2.11.1",
     "vue": "^2.6.10",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.1.2",
     "vuex": "^3.1.1"
   },
@@ -24,6 +25,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "husky": "^4.0.0-beta.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.2.0",
     "vue-template-compiler": "^2.6.10"
   },
   "browserslist": [
