--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.2.1",
     "element-ui": "^2.11.1",
     "vue": "^2.6.10",
+    "vue-echarts": "^4.0.3",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.1.2",
     "vuex": "^3.1.1"
