--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue": "^2.6.10",
     "vue-echarts": "^4.0.3",
     "vue-particles": "^1.0.9",
-    "vue-router": "^3.0.7",
+    "vue-router": "3.0.7",
     "vue2-verify": "^1.1.5",
     "vuex": "^3.1.1"
   },
